fix teammates  alignment issues once and for all #202

--- a/drupal/sites/all/themes/antistatique/assets/sass/organisms/_teammates.scss
+++ b/drupal/sites/all/themes/antistatique/assets/sass/organisms/_teammates.scss
@@ -9,7 +9,8 @@
   .team-avatar {
     text-align: center;
     position: relative;
-    display: block;
+    display: inline-block;
+    max-width: 100%;
     margin-bottom: 10px;
     padding: 3px;
 
@@ -26,6 +27,7 @@
     }
     img {
       position: relative;
+      display: inline-block;
     }
   }
 }
